Add keyboard navigation, SEO, games menu, and dropdown
- Arrow key navigation between elements with focus ring
- Escape key cascade: close details, reset filter, clear search
- Ctrl+S to focus search, Tab to jump to first search result
- Arrow keys cycle through search matches when searching
- Add meta tags, Open Graph, JSON-LD structured data for SEO
- Add robots.txt and sitemap.xml
- Add top bar with hamburger menu (Game 1, Game 2) and options dropdown
- Fix focus ring to only show on one element at a time

--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>periodic-table</title>
+    <title>Periodic Table of Elements - Interactive Chemistry Reference</title>
+    <meta name="description" content="Interactive periodic table of elements with search, filtering by category, keyboard navigation, and detailed element properties including compounds, melting and boiling points." />
+    <meta name="keywords" content="periodic table, elements, chemistry, interactive, atomic number, atomic mass, compounds" />
+    <meta name="author" content="CodMonk" />
+    <link rel="canonical" href="https://codmonk.github.io/periodic-table/" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Periodic Table of Elements" />
+    <meta property="og:description" content="Interactive periodic table with search, category filters, and detailed element properties." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codmonk.github.io/periodic-table/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Periodic Table of Elements" />
+    <meta name="twitter:description" content="Interactive periodic table with search, category filters, and detailed element properties." />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Periodic Table of Elements",
+      "description": "Interactive periodic table of elements with search, filtering, and detailed element information.",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "Any",
+      "author": {
+        "@type": "Organization",
+        "name": "CodMonk"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
