Update URLs to www.codmonk.com/ptable

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="Interactive periodic table of elements with search, filtering by category, keyboard navigation, and detailed element properties including compounds, melting and boiling points." />
     <meta name="keywords" content="periodic table, elements, chemistry, interactive, atomic number, atomic mass, compounds" />
     <meta name="author" content="CodMonk" />
-    <link rel="canonical" href="https://codmonk.github.io/periodic-table/" />
+    <link rel="canonical" href="https://www.codmonk.com/ptable/" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Periodic Table of Elements" />
     <meta property="og:description" content="Interactive periodic table with search, category filters, and detailed element properties." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://codmonk.github.io/periodic-table/" />
+    <meta property="og:url" content="https://www.codmonk.com/ptable/" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
